syntax = "proto3";

package api.v1;
option go_package = "./pb";

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1 [json_name = "access_token"];
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
}